<resources>
    <string name="app_name">CoderDojo</string>

    <!--Recursos de Ejemplo-->
    <string-array name="example1">
            <item>"Practicando con Arduino"</item>
            <item>"botanicos@dojo.com"</item>
            <item>"Hipolito Irigoyen 511"</item>
            <item>"Veni a programar tropio robot! "</item>
            <item>"23-11-2016"</item>
        </string-array>
    <string-array name="example2">
            <item>"Taller de recursos Botanicos"</item>
            <item>"botanicos@dojo.com"</item>
            <item>"San Martin 599"</item>
            <item>"Veni y ayudanos a distribuir semillas a lo largo de COrdoba"</item>
            <item>"25-10-2019"</item>
        </string-array>
    <string-array name="example3">
            <item>"Osueando"</item>
            <item>"Av. Hipólito Irigoyen 651"</item>
            <item>"A crear niveles que destrozen ese raton"</item>
            <item>"28-12-2017"</item>
    </string-array>

    <!--Recursos de Ejemplo Asistentes-->
    <string-array name="asistente1">
        <item>"asistente@1.com"</item>
        <item>"Asistente 1"</item>
        <item>""</item>
    </string-array>
    <string-array name="asistente2">
        <item>"asistente@2.com"</item>
        <item>"Asistente 2"</item>
        <item>""</item>
    </string-array>
    <string-array name="asistente3">
        <item>"asistente@3.com"</item>
        <item>"Asistente 3"</item>
        <item>""</item>
    </string-array>
    <string-array name="asistente4">
        <item>"asistente@4.com"</item>
        <item>"Asistente 4"</item>
        <item>""</item>
    </string-array>

    <string name="tv_usuario_registro">Nombre de usuario</string>
    <string name="tv_contraseña_registro">Contraseña</string>
    <string name="tv_confirmar_contraseña_registro">Repetir contraseña</string>
    <string name="tv_nombre_y_apellido_registro">Apellido y nombre</string>
    <string name="btn_registro_registro">Registrarse</string>
    <string name="tv_email">Email</string>
    <string name="tv_usuario_login">Usuario</string>
    <string name="tv_contraseña_login">Contraseña</string>
    <string name="cb_recordar">Recordar contraseña</string>
    <string name="btn_ingreso">Ingresar</string>
    <string name="btn_registro">Registrarse</string>
</resources>
