<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="hackatong.coderdojo.activity.RegisterActivity"
    android:orientation="vertical">


    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="6"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tv_nombreUsuario_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_usuario_registro"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/et_nombreUsuario_registro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text" />
        <TextView
            android:id="@+id/tv_contraseña_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_contraseña_registro"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/et_contraseña_registro"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_confirmar_contraseña_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_confirmar_contraseña_registro"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/et_confirmar_contraseña_registro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:inputType="textPassword"
            android:layout_weight="1" />
        <TextView
            android:id="@+id/tv_nombre_y_apellido_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_nombre_y_apellido_registro"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/et_nombre_y_apellido_registro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text" />
        <TextView
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_email"
            android:textSize="15sp" />
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="text" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sp_tipo_usuario">

        </Spinner>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="4"
        android:gravity="center">

        <Button
            android:id="@+id/btn_registro_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/btn_registro_registro"
            android:gravity="center"
            android:layout_weight="2" />

    </LinearLayout>


</LinearLayout>
