<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="hackatong.coderdojo.activity.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center"
        android:background="@color/black">

        <ImageView
            android:src="@mipmap/logo"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iv_login" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_usuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_usuario_login"/>
        <EditText
            android:id="@+id/et_nombreUsuario_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_contraseña_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_contraseña_login" />
        <EditText
            android:id="@+id/et_contraseña_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
        <CheckBox
            android:id="@+id/cb_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cb_recordar"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:baselineAligned="false"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_ingreso"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_ingreso"/>
            <Button
                android:id="@+id/btn_registro"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textAllCaps="false"
                android:text="@string/btn_registro"/>

        </LinearLayout>


    </LinearLayout>



</LinearLayout>
